Update build for Java 21